--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -18,7 +18,7 @@ lint:
     - markdownlint@0.32.2
     - prettier@2.7.1
 cli:
-  version: 0.18.1-beta
+  version: 1.0.0
 plugins:
   sources:
     - id: trunk
